[package]
name = "adder"
version = "0.1.0"
edition = "2021"
license = "WTFPL"
publish = false

[dependencies]
solana-program = "=1.11.1"
borsh = "=0.9.3"

[features]
test-bpf = []

[dev-dependencies]
solana-program-test = "=1.11.1"
solana-sdk = "=1.11.1"
assert_matches = "1.4.0"
solana-validator = "=1.11.1"
solana-logger = "=1.11.1"

[lib]
crate-type = ["cdylib", "lib"]
